Criacao dos campos legenda e campo na tabela imagem

--- a/BancoSangue/Views/Imagens/Details.cshtml
+++ b/BancoSangue/Views/Imagens/Details.cshtml
@@ -18,6 +18,14 @@
             @Html.DisplayFor(model => model.doacao.Titulo)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Legenda)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Legenda)
+        </dd>
+
     </dl>
 </div>
 <p>
