--- a/BancoSangue/Views/Imagens/Delete.cshtml
+++ b/BancoSangue/Views/Imagens/Delete.cshtml
@@ -19,6 +19,14 @@
             @Html.DisplayFor(model => model.doacao.Titulo)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Legenda)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Legenda)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
