--- a/BancoSangue/Views/Imagens/Index.cshtml
+++ b/BancoSangue/Views/Imagens/Index.cshtml
@@ -14,6 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.doacao.Titulo)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Legenda)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +24,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.doacao.Titulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Legenda)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
