Alteracao da pagina de Doacoes

--- a/BancoSangue/Content/Site.css
+++ b/BancoSangue/Content/Site.css
@@ -22,3 +22,19 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.caixa{
+	border-radius:25px;
+	box-shadow: 2px 2px 1px 1px gray;
+	background-color:aliceblue;
+	border-top:3px solid #10afbf;
+	overflow:auto;
+}
+.caixa img{
+	border-radius:25px;
+	filter:grayscale(100%);
+}
+
+.caixa img:hover {
+filter: none;
+}
