--- a/BancoSangue/Views/Doacoes/Index.cshtml
+++ b/BancoSangue/Views/Doacoes/Index.cshtml
@@ -53,6 +53,9 @@
             @Html.DisplayFor(modelItem => item.NomeResponsavel)
         </td>
         <td>
+            @Html.ActionLink("Create","Create")
+        </td>
+        <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
