--- a/BancoSangue/Views/Tela/Index.cshtml
+++ b/BancoSangue/Views/Tela/Index.cshtml
@@ -12,7 +12,7 @@
             <h1>@Model.Titulo</h1>
             <hr />
             <h2>@Model.Descricao</h2>
-            <hr/>
+            <hr />
             <div class="col-md-4">
                 <div class="form-group">
                     @Html.LabelFor(model => model.DataInicio, htmlAttributes: new { @class = "control-label " })
@@ -22,7 +22,7 @@
                     </div>
 
                 </div>
-               
+
             </div>
             <div class="col-md-4">
 
@@ -31,9 +31,9 @@
                     <div>
                         @Html.DisplayFor(model => model.DataFim, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
-                    
+
                 </div>
-               
+
             </div>
             <div class="col-md-4">
 
@@ -42,40 +42,119 @@
                     <div>
                         @Html.DisplayFor(model => model.NumeroVagas, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
-                    
+
                 </div>
 
-                
+
             </div>
-                       
+
         </div>
-            
+
         <div class="col-xs-12">
             <hr />
         </div>
 
-        
-        <div class="col-xs-12">
 
-            @foreach (var i in Model.imagem)
-            {
-                <div class="col-md-4">
-                    <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class="img-responsive">
-                    <p>@i.Legenda</p>
-                    
-                </div>
 
-                <div class="col-md-4">
-                    <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class="img-responsive">
-                    <p>@i.Legenda</p>
-                </div>
+    </div>
 
-                <div class  = "col-md-4">
-                    <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class="img-responsive">
-                    <p>@i.Legenda </p>
-                </div>
+    <div class="caixa">
+
+        <div class="col-xs-12 ">
+            @{int cont = 0;
+                foreach (var i in Model.imagem)
+                {
+
+
+<div class="col-md-4">                    <div class="caixa2">
+                        <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class="img-responsive img-click ">
+                        <p>@i.Legenda</p>
+
+                    </div></div>
+
+
+                }
+
             }
-           
         </div>
     </div>
 </div>
+
+
+
+
+<div id="myModal" class="modal fade" role="dialog">
+
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 style="color:red;"><span class="glyphicon glyphicon-lock"></span> Login</h4>
+            </div>
+            <div class="modal-body">
+
+                <div id="carousel" class="carousel slide" data-ride="carousel">
+
+                    <div class="carousel-inner" role="listbox">
+
+                        @{cont = 0;
+                            foreach (var i in Model.imagem)
+                            {
+                                if (cont == 0)
+                                {
+                                    <div class="col-sx-12 caixa2 item active">
+                                        <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
+                                        <p>@i.Legenda</p>
+
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="col-sx-12 caixa2 item">
+                                        <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
+                                        <p>@i.Legenda</p>
+                                    </div>
+                                }
+                                cont++;
+
+
+
+                            }
+
+                        }
+
+
+        
+
+                    </div>
+                    <a class="left carousel-control" href="#carousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+            </div>
+
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $(document).ready(function () {
+            $(".img-click").click(function () {
+                $("#myModal").modal();
+            });
+        });
+    </script>
+}
