--- a/BancoSangue/Views/Doacoes/Delete.cshtml
+++ b/BancoSangue/Views/Doacoes/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que dessaja excluir?</h3>
 <div>
     <h4>Doacao</h4>
     <hr />
