--- a/BancoSangue/Views/Tela/Index.cshtml
+++ b/BancoSangue/Views/Tela/Index.cshtml
@@ -1,156 +1,162 @@
-﻿@model BancoSangue.Models.Doacao
+﻿@model IList<BancoSangue.Models.Doacao>
 
 @{
     ViewBag.Title = "Create";
 }
 
-<div class="row">
 
-    <div class="col-xs-12 caixa">
+@foreach (var m in Model)
+{
+    <div class="row">
 
-        <div class="col-xs-12">
-            <h1>@Model.Titulo</h1>
-            <hr />
-            <h2>@Model.Descricao</h2>
-            <hr />
-            <div class="col-md-4">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DataInicio, htmlAttributes: new { @class = "control-label " })
+      
+        <div class="col-xs-12 caixa">
 
-                    <div>
-                        @Html.DisplayFor(model => model.DataInicio, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-xs-12">
+                <h1>@m.Titulo</h1>
+                <hr />
+                <h2>@m.Descricao</h2>
+                <hr />
+                @*<div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.DataInicio, htmlAttributes: new { @class = "control-label " })
+                            <div>
+                                @Html.DisplayFor(model => model.DataInicio, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+
+                        </div>
+
                     </div>
+                    <div class="col-md-4">
 
-                </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.DataFim, htmlAttributes: new { @class = "control-label " })
+                            <div>
+                                @Html.DisplayFor(m => m.DataFim, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+
+                        </div>
+
+                    </div>*@
+                @*<div class="col-md-4">
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.NumeroVagas, htmlAttributes: new { @class = "control-label " })
+                            <div>
+                                @Html.DisplayFor(model => model.NumeroVagas, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+
+                        </div>
+
+
+                    </div>*@
 
             </div>
-            <div class="col-md-4">
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DataFim, htmlAttributes: new { @class = "control-label " })
-                    <div>
-                        @Html.DisplayFor(model => model.DataFim, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-
-                </div>
-
+            <div class="col-xs-12 margintopImagem">
+                <hr />
             </div>
-            <div class="col-md-4">
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.NumeroVagas, htmlAttributes: new { @class = "control-label " })
-                    <div>
-                        @Html.DisplayFor(model => model.NumeroVagas, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-
-                </div>
 
 
-            </div>
 
         </div>
 
-        <div class="col-xs-12">
-            <hr />
-        </div>
+        <div class="caixa">
 
-
-
-    </div>
-
-    <div class="caixa">
-
-        <div class="col-xs-12 ">
-            @{int cont = 0;
-                foreach (var i in Model.imagem)
+            <div class="col-xs-12 ">
+                @{int cont = 0;
+                foreach (var i in m.imagem)
                 {
 
 
-                    <div class="col-md-4 ">
-                        <div class="caixa2">
-                            <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class="img-responsive img-click" data-id="@cont">
-                            <p>@i.Legenda</p>
+                <div class="col-md-4 ">
+                    <div class="caixa2">
+                        <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class="img-responsive img-click" data-id="@cont">
+                        <p>@i.Legenda</p>
 
-                        </div>
                     </div>
+                </div>
 
-                    cont++;
+                        cont++;
+
+                    }
 
                 }
-
-            }
+            </div>
         </div>
     </div>
-</div>
 
+    <div id="myModal" class="modal fade" role="dialog">
 
+        <div class="modal-dialog">
 
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 style="color:red;"><span class="glyphicon glyphicon-lock"></span> Login</h4>
+                </div>
+                <div class="modal-body">
 
-<div id="myModal" class="modal fade" role="dialog">
+                    <div id="carousel" class="carousel slide" data-ride="carousel">
 
-    <div class="modal-dialog">
+                        <div class="carousel-inner" role="listbox">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 style="color:red;"><span class="glyphicon glyphicon-lock"></span> Login</h4>
-            </div>
-            <div class="modal-body">
-
-                <div id="carousel" class="carousel slide" data-ride="carousel">
-
-                    <div class="carousel-inner" role="listbox">
-
-                        @{cont = 0;
-                            foreach (var i in Model.imagem)
-                            {
-                                if (cont == 0)
+                            @{cont = 0;
+                                foreach (var i in m.imagem)
                                 {
-                                    <div class="col-sx-12 caixa2 item active">
-                                        <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
-                                        <p>@i.Legenda</p>
+                                    if (cont == 0)
+                                    {
+                            <div class="col-sx-12 caixa2 item active">
+                                <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
+                                <p>@i.Legenda</p>
 
-                                    </div>
+                            </div>
+                                    }
+                                    else
+                                    {
+                            <div class="col-sx-12 caixa2 item">
+                                <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
+                                <p>@i.Legenda</p>
+                            </div>
+                                    }
+                                    cont++;
+
+
+
                                 }
-                                else
-                                {
-                                    <div class="col-sx-12 caixa2 item">
-                                        <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
-                                        <p>@i.Legenda</p>
-                                    </div>
-                                }
-                                cont++;
-
-
 
                             }
 
-                        }
 
 
 
-
+                        </div>
+                        <a class="left carousel-control" href="#carousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="left carousel-control" href="#carousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+
                 </div>
 
-            </div>
+                <div class="modal-footer">
+                    <button id="closeModal" type="button" class="btn btn-block btn-primary" data-dismiss="modal">Sair</button>
 
-            <div class="modal-footer">
-                <button id="closeModal" type="button" class="btn btn-block btn-primary" data-dismiss="modal">Sair</button>
-
+                </div>
             </div>
         </div>
     </div>
-</div>
+                                }
+
+
+
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
