--- a/BancoSangue/Views/Doacoes/Create.cshtml
+++ b/BancoSangue/Views/Doacoes/Create.cshtml
@@ -4,16 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Para criar uma campanha preencha os campos e salve.</h2>
 
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Doacao</h4>
-        <hr />
+    <div class="form-horizontal caixa3">
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -85,7 +84,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar para lista", "Index")
 </div>
 <div hidden id="baseImagemCarrossel">
     <div class="col-xs-12 col-sm-6 selecionar">
