--- a/BancoSangue/Views/Doacoes/Delete.cshtml
+++ b/BancoSangue/Views/Doacoes/Delete.cshtml
@@ -4,12 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Aviso! Você esta prestes a excluir uma campanha.</h2>
 
-<h3>Você tem certeza que dessaja excluir?</h3>
-<div>
-    <h4>Doacao</h4>
-    <hr />
+<h3>Você tem certeza que deseja excluir?</h3>
+<div class="caixa3" >
+   
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Titulo)
@@ -65,8 +64,12 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" /> 
+           
         </div>
     }
+</div>
+
+<div>
+    @Html.ActionLink("Voltar para a lista", "Index")
 </div>
