--- a/BancoSangue/Views/Doacoes/Details.cshtml
+++ b/BancoSangue/Views/Doacoes/Details.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes da campanha</h2>
 
 <div>
-    <h4>Doacao</h4>
-    <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal caixa3 ">
         <dt>
             @Html.DisplayNameFor(model => model.Titulo)
         </dt>
@@ -61,6 +59,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Voltar para a lista", "Index")
 </p>
