--- a/BancoSangue/Views/Doacoes/Edit.cshtml
+++ b/BancoSangue/Views/Doacoes/Edit.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Altere os campos e salve novamente.</h2>
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Doacao</h4>
-        <hr />
+    <div class="form-horizontal caixa3 ">
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
@@ -95,7 +94,7 @@
     </div>
 </div>
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar para a lista", "Index")
 </div>
 
 @section Scripts {
