--- a/BancoSangue/Views/Tela/Index.cshtml
+++ b/BancoSangue/Views/Tela/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
 
       
-        <div class="col-xs-12 caixa">
+        <div class="col-xs-12 caixa3">
 
             <div class="col-xs-12">
                 <h1>@m.Titulo</h1>
@@ -18,38 +18,38 @@
                 <h2>@m.Descricao</h2>
                 <hr />
                 @*<div class="col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.DataInicio, htmlAttributes: new { @class = "control-label " })
-                            <div>
-                                @Html.DisplayFor(model => model.DataInicio, new { htmlAttributes = new { @class = "form-control" } })
-                            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.DataInicio, htmlAttributes: new { @class = "control-label " })
+                <div>
+                    @Html.DisplayFor(m => m.DataInicio, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
 
-                        </div>
+            </div>
 
-                    </div>
-                    <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.DataFim, htmlAttributes: new { @class = "control-label " })
-                            <div>
-                                @Html.DisplayFor(m => m.DataFim, new { htmlAttributes = new { @class = "form-control" } })
-                            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.DataFim, htmlAttributes: new { @class = "control-label " })
+                <div>
+                    @Html.DisplayFor(m => m.DataFim, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
 
-                        </div>
+            </div>
 
-                    </div>*@
-                @*<div class="col-md-4">
+        </div>
+    <div class="col-md-4">
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.NumeroVagas, htmlAttributes: new { @class = "control-label " })
-                            <div>
-                                @Html.DisplayFor(model => model.NumeroVagas, new { htmlAttributes = new { @class = "form-control" } })
-                            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.NumeroVagas, htmlAttributes: new { @class = "control-label " })
+                <div>
+                    @Html.DisplayFor(model => model.NumeroVagas, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
 
-                        </div>
+            </div>
 
 
-                    </div>*@
+        </div>*@
 
             </div>
 
@@ -65,8 +65,8 @@
 
             <div class="col-xs-12 ">
                 @{int cont = 0;
-                foreach (var i in m.imagem)
-                {
+                    foreach (var i in m.imagem)
+                    {
 
 
                 <div class="col-md-4 ">
@@ -94,7 +94,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 style="color:red;"><span class="glyphicon glyphicon-lock"></span> Login</h4>
+                    @*<h4 style="color:red;"><span class="glyphicon glyphicon-lock"></span> Login</h4>*@
+                    <h4 style="color:#10afbf; text-align:center; "><span></span> FOTOS DA CAMPANHA</h4>
                 </div>
                 <div class="modal-body">
 
@@ -105,7 +106,7 @@
                             @{cont = 0;
                                 foreach (var i in m.imagem)
                                 {
-                                    if (cont == 0)
+                                    if (cont == 0) 
                                     {
                             <div class="col-sx-12 caixa2 item active">
                                 <img src="~/Content/@i.caminho" alt="@i.Legenda" align="middle" class=" img-responsive">
