--- a/BancoSangue/Content/Site.css
+++ b/BancoSangue/Content/Site.css
@@ -104,6 +104,9 @@ p {
     text-align: center;
 }
 
+.caixa4{
+    border-color: #5fbaef;
+}
 .caixa2 img {
     margin-left:auto;
     margin-right:auto;
@@ -122,6 +125,8 @@ p {
     padding-top:40px;
     padding-bottom: 40px;
 }
+
+
 .labelmargin {
     padding-left: 25px;
     width: 300px;
