--- a/BancoSangue/Views/Doacoes/Edit.cshtml
+++ b/BancoSangue/Views/Doacoes/Edit.cshtml
@@ -82,7 +82,7 @@
 
                 }
 <div hidden id="baseImagemCarrossel">
-    <div class="col-xs-12 col-sm-6 selecionar">
+    <div class="col-xs-12 col-sm-6 ui-state-default">
         <div class="col-xs-12">
             <img width="100%" />
         </div>
@@ -119,7 +119,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <script>
         "use strict"
@@ -130,6 +130,10 @@
         $(document).on("click", ".btn-delete", function () {
            var id="#img-" + $(this).data("id");
            $(id).remove();
+        });
+        $(function () {
+            $("#LocalImagens").sortable();
+            $("#LocalImagens").disableSelection();
         });
 
         $(document).on("change", "#AdicionaImagem", function () {
